[package]
name = "ruki"
version = "0.1.0"
authors = ["Mikazuki <mikazuki_fuyuno@outlook.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[[bin]]
path = "src/main.rs"
name = "ruki"

[workspace]
members = [
  "win-parse",
  "windows-executable-parser"
]

[dependencies]
